# gitignore-template

./: .editorconfig  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  dependabot.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python_test.yaml  yapf_check.yaml
gitignore_template/: typer_main.py  utility_functions.py
tests/: test_typer_main.py
