[tool.poetry]
name = "gitignore-template"
version = "1.2.0"
description = "Downloads a gitignore template from https://github.com/github/gitignore for your project"
authors = ["Jonathan Boyle <programmerfalcon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typer = "^0.8.0"
requests = "^2.27.1"
PyGithub = "^1.55"
python-Levenshtein = "^0.20.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
bpython = "^0.24"

[tool.poetry.scripts]
gitignore-template = "gitignore_template.typer_main:main"

[tool.yapf]
based_on_style = "google"
use_tabs = true
column_limit = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
